Fixed mobile issue w. horizontal scrollbar on homepage

--- a/style.css
+++ b/style.css
@@ -688,6 +688,19 @@ object {
 	width: 100%;
 	height: 100%;
 }
+@-moz-document url-prefix() {
+	header.table {
+		display:block;
+	}
+	header.table .tr {
+		display: block;
+	}
+	header.table .tr .td {
+		display: block;
+		float: left;
+	}
+}
+
 /* ==|== Top =================
    Featured Img
    ====================================== */
@@ -878,6 +891,7 @@ span.jta-tweet-action-retweet a{
 	margin-right: 3.4%;
 	width:65.6%;
 }
+
 .ig {
 	border-color:#010101;
 	border-style:solid;
@@ -890,6 +904,9 @@ span.jta-tweet-action-retweet a{
 }
 .ig-6 {
 	clear: left;
+}
+.ig a {
+	display: block;
 }
 .ig img {
 	display: block;
@@ -1988,6 +2005,7 @@ abbr[title] {
     }
 		.table {
 			display:table;
+			table-layout:fixed;
 		}
 		.tr {
 			display:table-row;
@@ -1998,6 +2016,13 @@ abbr[title] {
 		.brand-mobile,.nav-mobile {
 			display: none
 		}
+
+@-moz-document url-prefix() {
+	.td {
+		float: left;
+		margin:0;
+	}
+}
 
 #donate-popup, #text-to-give-popup{
     display: none;
@@ -2121,6 +2146,22 @@ abbr[title] {
 	html {
 		font-size: 0.9em
 	}
+	/*
+	.mobile-wrap div {
+		padding:0 !important;
+	}
+	*/
+	body .dynamic {
+		padding:0;
+	}
+	.instagram-grid {
+		margin:20px;
+	}
+	.g {
+		margin-left: 0;
+		margin-right: 0;
+	}
+
 	.span-1, .span-2 {
 		width:100%;
 		margin-right: 0;
@@ -2354,6 +2395,7 @@ abbr[title] {
 	}
 	.instagram-feed h2 .more {
 		bottom:5px;
+		right:20px;
 		top:auto;
 	}
 
